# rtac_optix

./: .gitignore  CMakeLists.txt  README.md  TODOs.md
check_installation/src/: main.cpp
cmake/: Config.cmake.in  installation.cmake
display/: CMakeLists.txt
display/cmake/: Config.cmake.in  installation.cmake
display/include/optix_helpers/: Display.h
display/include/optix_helpers/display/: Display.h  GLBuffer.h  Handle.h  ImageRenderer.h  ImageView.h  MeshRenderer.h  OrthoView.h  PinholeView.h  PointCloudRenderer.h  RenderBufferGL.h  Renderer.h  View.h  View3D.h  utils.h
display/src/: Display.cpp  ImageRenderer.cpp  ImageView.cpp  MeshRenderer.cpp  OrthoView.cpp  PinholeView.cpp  PointCloudRenderer.cpp  RenderBufferGL.cpp  Renderer.cpp  View.cpp  View3D.cpp  utils.cpp
display/tests/: CMakeLists.txt
display/tests/src/: animation_test.cpp  base_test.cpp  eigen_alignement.cpp  main.cpp  mesh_test.cpp  pointcloud_test.cpp  render3d_test.cpp  view_test.cpp
include/optix_helpers/: Buffer.h  Context.h  Geometry.h  GeometryTriangles.h  Handle.h  Material.h  Model.h  NVRTC_Helper.h  NamedObject.h  Nvrtc.h  OrthoView.h  PinHoleView.h  Program.h  ProgramManager.h  RayGenerator.h  RayType.h  Scene.h  SceneItem.h  Source.h  TextureSampler.h  TexturedMaterial.h  ViewGeometry.h  utils.h
include/optix_helpers/samples/: OrthoView.h  PinHole.h  PinHoleView.h  geometries.h  items.h  materials.h  maths.h  models.h  raygenerators.h  raytypes.h  scenes.h  textures.h  utils.h  viewgeometries.h
installation_test/: CMakeLists.txt
optix-6.5/: CMakeLists.txt
optix-6.5/cmake/: Config.cmake.in  FindOptiX.cmake
optix-6.5/display/: CMakeLists.txt
optix-6.5/display/cmake/: Config.cmake.in
optix-6.5/display/tests/: CMakeLists.txt
optix-6.5/display/tests/src/: animation_test.cpp  render3d_test.cpp
optix-6.5/include/optix_helpers/: Geometry.h  GeometryTriangles.h  Handle.h  Model.h  Program.h  RayType.h  Scene.h  TextureSampler.h  utils.h
optix-6.5/include/optix_helpers/samples/: geometries.h  items.h  materials.h  maths.h  raygenerators.h  scenes.h  textures.h
optix-6.5/src/: Buffer.cpp  Geometry.cpp  GeometryTriangles.cpp  Material.cpp  Model.cpp  RayType.cpp
optix-6.5/src/samples/: geometries.cpp
optix-6.5/tests/: CMakeLists.txt
optix-6.5/tests/src/: model_test.cpp  raytype_test.cpp  sources_test.cpp  texture_base_test.cpp
optix-7/: CMakeLists.txt  LICENSE
optix-7/cmake/: Config.cmake.in  FindOptiX.cmake  generate_ptx_header.cmake  rtac_target_add_ptx.cmake
optix-7/docs/: Doxyfile  optix_tagfile.tag
optix-7/include/optix_helpers/: Context.h  Handle.h  Nvrtc.h  Pipeline.h
optix-7/include/rtac_optix/: AccelerationStruct.h  Context.h  CustomAccelStruct.h  CustomGeometry.h  GeometryAccelStruct.h  GroupInstance.h  Handle.h  Instance.h  InstanceAccelStruct.h  InstanceDescription.h  Material.h  MeshAccelStruct.h  MeshGeometry.h  Module.h  Nvrtc.h  ObjectInstance.h  OptixWrapper.h  Pipeline.h  ProgramGroup.h  RayFactory.h  RayPayload.h  Raytype.h  RaytypeFactory.h  ShaderBinding.h  ShaderBindingTable.h  Source.h  TraversableHandle.h  utils.h
optix-7/include/rtac_optix/helpers/: PinholeCamera.h  RenderBuffer.h  maths.h
optix-7/include/rtac_optix/samples/: PinholeCamera.h  maths.h
optix-7/src/: AccelerationStruct.cpp  Context.cpp  CustomAccelStruct.cpp  CustomGeometry.cpp  GeometryAccelStruct.cpp  GroupInstance.cpp  Instance.cpp  InstanceAccelStruct.cpp  InstanceDescription.cpp  Material.cpp  MeshAccelStruct.cpp  MeshGeometry.cpp  Module.cpp  Nvrtc.cpp  ObjectInstance.cpp  Pipeline.cpp  ProgramGroup.cpp  ShaderBinding.cpp  ShaderBindingTable.cpp  Source.cpp
optix-7/tests/: CMakeLists.txt
optix-7/tests/autosbt_test/: CMakeLists.txt
optix-7/tests/autosbt_test/src/: autosbt_test.cpp  autosbt_test.cu  autosbt_test.h
optix-7/tests/display_test0/: CMakeLists.txt
optix-7/tests/display_test0/src/: display_test0.cpp  display_test0.cu  display_test0.h
optix-7/tests/helpers/: CMakeLists.txt
optix-7/tests/helpers/src/: helpers.cpp  helpers.cu  helpers.h
optix-7/tests/materials_test/: CMakeLists.txt
optix-7/tests/materials_test/src/: materials_test.cpp  materials_test.cu  materials_test.h
optix-7/tests/mesh/: CMakeLists.txt
optix-7/tests/mesh/src/: mesh_test.cpp  mesh_test.cu  mesh_test.h
optix-7/tests/optix_hello/: CMakeLists.txt
optix-7/tests/optix_hello/src/: draw_solid_color.cu  optix_hello.cpp  optix_hello.h
optix-7/tests/optix_triangle/: CMakeLists.txt
optix-7/tests/optix_triangle/src/: optix_triangle.cpp  optix_triangle.cu  optix_triangle.h
optix-7/tests/pinhole/: CMakeLists.txt
optix-7/tests/pinhole/src/: pinhole_test.cpp  pinhole_test.cu  pinhole_test.h
optix-7/tests/sbt_indexes0/: CMakeLists.txt
optix-7/tests/sbt_indexes0/src/: sbt_indexes0.cpp  sbt_indexes0.cu  sbt_indexes0.h
optix-7/tests/sbt_test0/: CMakeLists.txt
optix-7/tests/sbt_test0/src/: sbt_test0.cpp  sbt_test0.cu  sbt_test0.h
optix-7/tests/src/: compile_test.cpp  compile_test.cu  compile_test.h  nvrtc_ptx.cpp  optix_hello.cpp
src/: Buffer.cpp  Context.cpp  Geometry.cpp  GeometryTriangles.cpp  Material.cpp  Model.cpp  NVRTC_Helper.cpp  Nvrtc.cpp  OrthoView.cpp  PinHoleView.cpp  Program.cpp  ProgramManager.cpp  RayGenerator.cpp  RayType.cpp  Scene.cpp  SceneItem.cpp  Source.cpp  TextureSampler.cpp  TexturedMaterial.cpp  ViewGeometry.cpp  utils.cpp
src/display/: GLBuffer.cpp
src/samples/: OrthoView.cpp  PinHole.cpp  PinHoleView.cpp  geometries.cpp  items.cpp  materials.cpp  maths.cpp  models.cpp  raygenerators.cpp  raytypes.cpp  scenes.cpp  textures.cpp  utils.cpp
tests/: CMakeLists.txt
tests/src/: animation_test.cpp  base-test.cpp  buffer_test.cpp  context_test.cpp  cusamples.h  item_test.cpp  main.cpp  material_test.cpp  mirror_test.cpp  model_test.cpp  nvcrt-test.cpp  ortho_test.cpp  pinhole_test.cpp  program_manager_test.cpp  raytype_test.cpp  render3d_test.cpp  render_test.cpp  scene_test.cpp  sources_test.cpp  texture_base_test.cpp  texture_test.cpp
